2011-01-16 Borut Razem <borut.razem AT siol.net>

	* support/regression/collate-results.py: count invalid instructions

2011-01-15 Borut Razem <borut.razem AT siol.net>

	* src/SDCCmain.c, src/SDCCdwarf2.c, src/SDCCdwarf2.h, src/z80/gen.c,
	  src/SDCCglobl.h, src/pic16/pcode.h, src/pic16/pcode.c,
	  src/SDCCsystem.c, src/SDCC.lex:
	  code cleaning: removed warnings, use const char *
	* src/pic14/glue.c (emitIvals): removed empty line generation 

2011-01-15 Philipp Klaus Krause <pkk AT spth.de>

	* SDCCglobl.h:
	  Use Maarten's better bool scheme.

2011-01-15 Philipp Klaus Krause <pkk AT spth.de>

	* configure,
	  configure.in,
	  src/Makefile.in,
	  Makefile.common.in,
	  src/port.mk,
	  src/SDCCsymt.h,
	  src/SDCCsymt.c,
	  src/SDCClrange.c,
	  src/z80/z80.h,
	  src/z80/main.c,
	  src/z80/ralloc.h,
	  src/z80/ralloc.c,
	  src/z80/tree_dec.hh,
	  src/z80/ralloc2.cc,
	  src/z80/peeph-z80.def:
	  Reverted to old register allocator.

2011-01-15 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/ralloc2.cc:
	  Small change for MSVC compability:

2011-01-14 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/tree_dec.hh,
	  src/z80/ralloc2.cc:
	  Added GPLv2 or later license text.

2011-01-14 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/ralloc.c:
	  Remove some no longer used remains of the old register allocator.

2011-01-14 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/main.c:
	  Enable new register allocator options for the GBZ80.

2011-01-14 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>

	* src/z80/ralloc.c,
	  src/z80/ralloc2.cc:
	  Use new register allocator for the GBZ80.

2011-01-14 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>

	* configure,
	  configure.in,
	  src/Makefile.in,
	  Makefile.common.in,
	  src/port.mk,
	  src/SDCCsymt.h,
	  src/SDCCsymt.c,
	  src/SDCClrange.c,
	  src/z80/z80.h,
	  src/z80/main.c,
	  src/z80/ralloc.h,
	  src/z80/ralloc.c,
	  src/z80/tree_dec.hh,
	  src/z80/ralloc2.cc,
	  src/z80/peeph-z80.def: